--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
+    "class-transformer": "0.1.0-beta.10",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "joi": "^17.13.3",
