--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /node_modules
 /build
 
+
 # Logs
 logs
 *.log
@@ -41,6 +42,8 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
+.env.production
+
 
 # temp directory
 .temp
