--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "cross-env NODE_ENV=production nest start",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -33,6 +33,7 @@
     "class-transformer": "0.1.0-beta.10",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "helmet": "^7.1.0",
     "joi": "^17.13.3",
     "mysql2": "^3.11.3",
