Refactor: Config package and env of cloudinary

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,10 @@ NODE_ENV=development
 
 #assets
 IMAGE_PATH=assets/images
+#cloud
+API_KEY=284651146393287
+API_SECRET=-ipg8vu2AP2jvWqPWyk4x5UO4mI
+CLOUD_NAME=dxzstf273
 
 # database
 POSTGRES_HOST=0.0.0.0
