--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "0.1.0-beta.10",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "helmet": "^7.1.0",
@@ -51,6 +52,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
