add Product Entity

--- a/.env.development
+++ b/.env.development
@@ -10,9 +10,9 @@ API_SECRET=-ipg8vu2AP2jvWqPWyk4x5UO4mI
 CLOUD_NAME=dxzstf273
 
 # database
-POSTGRES_HOST=0.0.0.0
+POSTGRES_HOST=localhost
 POSTGRES_PORT=3306
 POSTGRES_USER=root
-POSTGRES_PASSWORD=123
+POSTGRES_PASSWORD=1234
 POSTGRES_DB=ecommercial_development
 
