--- a/.gitignore
+++ b/.gitignore
@@ -38,11 +38,13 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
 .env.production
+
 
 
 # temp directory
