Refactor: Update database configuration to use environment variables

--- a/.env.development
+++ b/.env.development
@@ -10,9 +10,9 @@ API_SECRET=-ipg8vu2AP2jvWqPWyk4x5UO4mI
 CLOUD_NAME=dxzstf273
 
 # database
-POSTGRES_HOST=localhost
-POSTGRES_PORT=3306
-POSTGRES_USER=root
-POSTGRES_PASSWORD=1234
-POSTGRES_DB=ecommercial_development
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_USER=root
+DATABASE_PASSWORD=1234
+DATABASE_NAME=ecommercial_development
 
