Refactor: Change Postgres variable to Database...

--- a/.env.development
+++ b/.env.development
@@ -10,9 +10,9 @@ API_SECRET=-ipg8vu2AP2jvWqPWyk4x5UO4mI
 CLOUD_NAME=dxzstf273
 
 # database
-DATABASE_HOST=localhost
+DATABASE_HOST=mysql
 DATABASE_PORT=3306
 DATABASE_USER=root
-DATABASE_PASSWORD=1234
+DATABASE_PASSWORD=khongbiet
 DATABASE_NAME=ecommercial_development
 
