Refactor: Update database configuration to use environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -5,14 +5,18 @@ NODE_ENV=development
 #assets
 IMAGE_PATH=assets/images
 #cloud
-API_KEY=
-API_SECRET=
-CLOUD_NAME=
+API_KEY=284651146393287
+API_SECRET=-ipg8vu2AP2jvWqPWyk4x5UO4mI
+CLOUD_NAME=dxzstf273
 
+#email
+MAIL_HOST=smtp.emailtest.com
+MAIL_PORT=587
+EMAIL_USERNAME=ldmhieu205@gmail.com
+EMAIL_PASSWORD=ncjtybtykxaxwqck
 # database
-POSTGRES_HOST=localhost
-POSTGRES_PORT=3306
-POSTGRES_USER=root
-POSTGRES_PASSWORD=123
-POSTGRES_DB=ecommercial_development
-
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_USER=root
+DATABASE_PASSWORD=123
+DATABASE_NAME=ecommercial_development
