--- a/package.json
+++ b/package.json
@@ -38,18 +38,15 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "ejs": "^3.1.10",
-    "faker": "^6.6.6",
     "helmet": "^7.1.0",
     "joi": "^17.13.3",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger": "^0.7.5",
-    "typeorm": "^0.3.20",
-    "typeorm-seeding": "^1.6.1"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -57,7 +54,6 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
-    "@types/faker": "^6.6.11",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
