feat: Implement shopping cart functionality with repositories and update entity relationships

--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,10 @@ API_KEY=
 API_SECRET=
 CLOUD_NAME=
 
+#gmail
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+
 # database
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
