--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
       "strictBindCallApply": false,
       "forceConsistentCasingInFileNames": false,
       "noFallthroughCasesInSwitch": false,
-      "strict": false
+      "strict": false,
+      "paths": {
+         "@/*": ["src/*"]
+      }
    },
    "exclude": ["node_modules", "dist", "src/templates"]
 }
