--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.7",
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "class-transformer": "0.1.0-beta.10",
     "class-validator": "^0.14.1",
